--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a  class="Home"  href="file:///C:/Users/bhada/Desktop/Technical/tech.html">Home</a>
             <a class="Projects"  href="#">Projects</a>
             <a class="about"  href="#">About</a>
-            <a  class="contact" href="#">Contact</a>
+            <a  class="contact" href="file:///C:/Users/bhada/Desktop/Technical/contact.html">Contact</a>
         </div>
         </h2>
 
