--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
     </div>
        
        <a href="https://wa.me/+919794015436"><div class="whats">Whatsapp</div><img class="whatsapp" src="whatsapp.png" alt=""> </a>
-       <a href=""><div class="insta">Instagram</div><img class="instagram" src="instagram.png" alt=""></a>
+       <a href="https://www.instagram.com/akash__bhadauriya_?igsh=MW80dGNteGVrZHkwcw=="><div class="insta">Instagram</div><img class="instagram" src="instagram.png" alt=""></a>
 
 
 </body>
